# yuv2buf

./: LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: empty.mnn
app/src/main/cpp/: mnn_helper_native.cpp  mnnnetnative.cpp
app/src/main/java/com/taobao/android/mnn/: MNNHelperNative.java  MNNImageProcess.java  MNNNetNative.java
app/src/main/java/ru/gordinmitya/yuv2buf_demo/: App.kt  AssetUtil.kt  CompositeConverter.kt  MNNConverter.kt  MainActivity.kt  MovingAverage.kt  OpenCVConverter.kt  OpenCVRoteterter.kt  RenderScriptConverter.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  item_converted.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
yuv2buf/: build.gradle
yuv2buf-shared-test/: build.gradle
yuv2buf-shared-test/src/main/: AndroidManifest.xml
yuv2buf-shared-test/src/main/java/ru/gordinmitya/yuv2buf/: YuvCommon.java
yuv2buf-shared-test/src/test/java/ru/gordinmitya/yuv2buf/: YuvCommonTest.java
yuv2buf/src/androidTest/java/ru/gordinmitya/yuv2buf/: ExampleInstrumentedTest.kt  InstrumentedBenchmark.kt  MLKit_BitmapUtils.java
yuv2buf/src/main/: AndroidManifest.xml
yuv2buf/src/main/java/ru/gordinmitya/yuv2buf/: Yuv.java
yuv2buf/src/test/java/ru/gordinmitya/yuv2buf/: ReuseTest.java  Yuv420Test.java  YuvCommon.java  YuvCommonTest.java  YuvNV21Test.java
